# exe-multi-porpose

./: CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: main.yml
